# flood-it

./: CMakeLists.txt  README.md  main.cpp
controller/: application.cpp  application.h
gui/: color_button.cpp  color_button.h  floodit_gui.cpp  floodit_gui.h  floodit_gui.ui  game_info.cpp  game_info.h  game_info.ui
model/: board.cpp  board.h  game.cpp  game.h  random.hpp
